# rust-backend-demo

./: .env.example  Cargo.toml  README.md  docker-compose.yml  test_ai.sh  test_api.sh  test_graphql.sh
migrations/: 20241120000000_init.sql
src/: ai_handler.rs  ai_model.rs  ai_repository.rs  ai_service.rs  config.rs  dto.rs  error.rs  handler.rs  main.rs  repository.rs  route.rs  schema.rs  service.rs  state.rs
src/app/: mod.rs  router.rs  state.rs
src/entities/: mod.rs
src/entities/ai/: mod.rs  model.rs
src/entities/user/: model.rs
src/features/: mod.rs
src/features/ai_integration/: mod.rs
src/features/ai_integration/api/: mod.rs  rest.rs
src/features/ai_integration/domain/: mod.rs  service.rs
src/features/ai_integration/infrastructure/: mod.rs  repository.rs
src/features/ai_integration/model/: dto.rs
src/features/user_management/api/: graphql.rs  mod.rs  rest.rs
src/features/user_management/domain/: mod.rs  service.rs
src/features/user_management/infrastructure/: mod.rs  repository.rs
src/shared/: mod.rs
src/shared/database/: connection.rs  mod.rs
src/shared/error/: error.rs
